[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/sxgd/nodes/ui/SxFadingRichTextLabel/SxFadingRichTextEffect.tres" type="RichTextEffect" id=1]
[ext_resource path="res://scenes/Clock.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxFxMotionBlur/SxFxMotionBlur.gd" type="Script" id=6]
[ext_resource path="res://addons/sxgd/nodes/fx/SxFxCamera.gd" type="Script" id=7]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxFxGrayscale/SxFxGrayscale.gd" type="Script" id=8]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxFxChromaticAberration/SxFxChromaticAberration.gd" type="Script" id=9]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxFxDissolve/SxFxDissolve.gd" type="Script" id=10]
[ext_resource path="res://resources/TileSet.tres" type="TileSet" id=11]
[ext_resource path="res://screens/Level.gd" type="Script" id=12]
[ext_resource path="res://addons/sxgd/nodes/ui/SxFadingRichTextLabel/SxFadingRichTextLabel.gd" type="Script" id=13]
[ext_resource path="res://addons/sxgd/assets/fonts/Jost-800-Heavy.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://scenes/MusicBG.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/fx/TimeParticles.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=16]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=17]
size = 64
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Level:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "init"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Level:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Level" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="CanvasLayer" parent="."]
layer = -101

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MusicBG" parent="Background" instance=ExtResource( 15 )]
audio_bus_output = "Music"

[node name="TimeParticles" parent="Background" instance=ExtResource( 16 )]

[node name="Clock" parent="Background" instance=ExtResource( 5 )]
position = Vector2( 640, 320 )

[node name="Overlay" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_lock_": true
}

[node name="GrayscaleFX" type="ColorRect" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 8 )

[node name="SxFXCamera" type="Camera2D" parent="."]
anchor_mode = 1
current = true
zoom = Vector2( 1.25, 1.25 )
smoothing_enabled = true
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="TMBackground" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TMForeground" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="FX" type="CanvasLayer" parent="."]

[node name="GrayscaleFX" type="ColorRect" parent="FX"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 8 )

[node name="BackBufferCopy" type="BackBufferCopy" parent="FX"]
copy_mode = 2
rect = Rect2( 0, 0, 1280, 720 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="SxMotionBlur" type="ColorRect" parent="FX/BackBufferCopy"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
script = ExtResource( 6 )

[node name="BackBufferCopy" type="BackBufferCopy" parent="FX/BackBufferCopy"]
copy_mode = 2
rect = Rect2( 0, 0, 1280, 720 )

[node name="ChromaticAberrationFX" type="ColorRect" parent="FX/BackBufferCopy/BackBufferCopy"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 9 )
enabled = false

[node name="BBDissolve" type="BackBufferCopy" parent="FX"]
visible = false
copy_mode = 2
rect = Rect2( 0, 0, 1280, 720 )

[node name="DissolveFX" type="ColorRect" parent="FX/BBDissolve"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 10 )
noise_period = 2.0
replacement_color = Color( 0, 0, 0, 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="SxFadingRichTextLabel" type="RichTextLabel" parent="UI/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1240.0
margin_bottom = 680.0
rect_min_size = Vector2( 500, 0 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 16 )
bbcode_enabled = true
bbcode_text = "[right][right][/right][/right]"
scroll_active = false
custom_effects = [ ExtResource( 1 ) ]
script = ExtResource( 13 )
autoplay = true
char_delay = 0.075
text_alignment = 1

[node name="Level" type="RichTextLabel" parent="UI/MarginContainer"]
margin_left = 40.0
margin_top = 586.0
margin_right = 1240.0
margin_bottom = 680.0
size_flags_vertical = 8
custom_fonts/normal_font = SubResource( 17 )
bbcode_enabled = true
bbcode_text = "[wave][rainbow]00[/rainbow][/wave]"
text = "00"
fit_content_height = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
autoplay = "init"
anims/RESET = SubResource( 19 )
anims/init = SubResource( 18 )
